tests/files/flow_controller_tests/should_run/062.cmdr
x = 10;
print ceil(x);