tests/files/flow_controller_tests/should_fail/036.cmdr
x = false;
print ceil(x);